--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -221,7 +221,6 @@ Support me: https://ko-fi.com/sapondanaisriwan
         ytd-watch-metadata > div#above-the-fold > #title {
             animation: slideInRight .7s;
         }
-        
     }
 
 
@@ -498,30 +497,45 @@ Support me: https://ko-fi.com/sapondanaisriwan
         }
     }
 
-
     /* ❌ Remove Shorts (Beta) */
-    /* Don't waste your time with this shit */
     /* I can't find the way to remove all shorts using css alone */
     if (removeShorts) {
-        #items ytd-guide-entry-renderer a#endpoint[title="Shorts"],
-        #items ytd-mini-guide-entry-renderer[aria-label="Shorts"],
-        ytd-video-renderer :has(a#thumbnail[href*="/shorts/"]),
-        ytd-rich-shelf-renderer[is-shorts],
-        ytd-compact-video-renderer :has(a#thumbnail[href*="/shorts/"]) {
-            display: none;
-        }
-        ytd-rich-grid-media,
+
+        /* These rules won't be applied in browsers that don't support :has() */
+        /* https://www.youtube.com/results?search_query=shorts */
         ytd-video-renderer,
-        ytd-rich-item-renderer {
-            :has(a[href*="/shorts/"]) {
-                display: none i;
+        
+        /* Remove shorts from watch page*/
+        #contents > ytd-compact-video-renderer,
+        #items > ytd-reel-item-renderer {
+            &:has(#dismissible > ytd-thumbnail > a#thumbnail[href^="/shorts/"]) {
+                display: none;
             }
         }
-        #contents > ytd-rich-item-renderer :has(a[href*="/shorts/"]) {
-            display: none i;
+
+        /* https://www.youtube.com/@MrBeast2/shorts */
+        ytd-rich-grid-renderer[is-shorts-grid] {
+            display: none;
         }
-        [page-subtype="channels"]  #contents :has(a[href*="/shorts/"]) {
-            display: none i;
+
+        /* https://www.youtube.com/@MrBeast2/featured */
+        #contents > ytd-item-section-renderer > #contents ytd-reel-shelf-renderer:has(yt-horizontal-list-renderer > #scroll-container > #items > ytd-reel-item-renderer #dismissible > ytd-thumbnail > a#thumbnail[href^="/shorts/"]) {
+            display: none;
+        }
+        ytd-rich-section-renderer:has(#content > ytd-rich-shelf-renderer[is-shorts]) {
+            display: none;
+        }
+        #endpoint.yt-simple-endpoint.ytd-guide-entry-renderer,
+        ytd-mini-guide-entry-renderer[guide-refresh] a.ytd-mini-guide-entry-renderer {
+            &[title="Shorts"] {
+                display: none;
+            }
+        }
+
+
+        /* https://www.youtube.com/hashtag/shorts */
+        [page-subtype="hashtag-landing-page"] > #primary > ytd-rich-grid-renderer #contents > ytd-rich-grid-row > #contents > ytd-rich-item-renderer:has(#content > ytd-rich-grid-media > #dismissible > ytd-thumbnail > a#thumbnail[href^="/shorts/"]) {
+            display: none;
         }
     }
 
